--- a/Client/src/index.html
+++ b/Client/src/index.html
@@ -11,6 +11,6 @@
 			You need to enable JavaScript to run this app.
 		</noscript>
 		<div id="root"></div>
-		<script src="bundle.js" type="text/javascript"></script>
+		<script src="bundle1.js" type="text/javascript"></script>
 	</body>
 </html>
